// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render Expense Summary 1`] = `
<div>
  <p>
    Viewing 
    0
    <span>
       expenses
    </span>
    , which 
    <span>
      total 
    </span>
    $0.00
  </p>
</div>
`;

exports[`Should render Expense Summary correctly with just one item 1`] = `
<div>
  <p>
    Viewing 
    1
    <span>
       expense
    </span>
    , which 
    <span>
      totals 
    </span>
    $1.34
  </p>
</div>
`;

exports[`Should render Expense Summary correctly with multiple items 1`] = `
<div>
  <p>
    Viewing 
    7
    <span>
       expenses
    </span>
    , which 
    <span>
      total 
    </span>
    $1,345.67
  </p>
</div>
`;
